styling to fix white space contact and about pages

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,6 +97,16 @@ h2.main {
     color: rgb(255,145,77);
 }
 
+.about {
+    font-family: "Didot";
+    background-color: whitesmoke;
+    padding-left: 300px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-right: 200px;
+    color: rgb(255,145,77);
+}
+
 h2.sub {
     padding-left: 100px;
 }
@@ -128,6 +138,7 @@ img.connectionImg {
     float: left;
     width: 500px;
     padding: 50px;
+    padding-left: 200px;
 }
 
 .info {
